add pages and navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <p>sssssses</p>
+    <%= link_to "Главная", root_path %>
+    <%= link_to "О сайте", pages_about_path %>
     <%= yield %>
   </body>
 </html>
